# UAV-collision-avoidance

./: CA.cpp  CA.h  CMakeLists.txt  README.md  WaypointTest.cpp  WaypointTest2.cpp  autopilot_interface _loiter.cpp  autopilot_interface _loiter.h  autopilot_interface.cpp  autopilot_interface.h  autopilot_interface_new_methods.cpp  serial_port.cpp  serial_port.h  waypointGenerator.cpp
MATLAB Analysis Code/: CA_Avoid_new.m  CA_analysis.m  GPStoCartesian.m  parseCAlog.m
Pre 2017 Collision Avoidance Code/: AircraftInfo.h  Avoid.cpp  Avoid.h  CollisionAvoidance.h  CollsionAvoidance.cpp  GPSandConstants.cpp  GPSandConstants.h  Main.cpp  Message.h  Position.h  Predict.cpp  Predict.h  README.txt  SafetyBubble.h
